# ChangeLog for app-emacs/wanderlust
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/wanderlust/ChangeLog,v 1.17 2004/06/02 13:37:16 agriffis Exp $

  02 Jun 2004; Aron Griffis <agriffis@gentoo.org> wanderlust-2.10.1-r1.ebuild:
  Fix use invocation

*wanderlust-2.11.29_pre20040522 (23 May 2004)

  23 May 2004; <usata@gentoo.org> wanderlust-2.11.27_pre20040509.ebuild,
  wanderlust-2.11.29_pre20040522.ebuild:
  New CVS snapshot. Removed old one.

*wanderlust-2.11.28_pre20040516 (18 May 2004)

  18 May 2004; Mamoru KOMACHI <usata@gentoo.org>
  wanderlust-2.11.26_pre20040418.ebuild,
  wanderlust-2.11.28_pre20040516.ebuild:
  New CVS snapshot. Removed old one.

*wanderlust-2.11.27_pre20040509 (11 May 2004)

  11 May 2004; Mamoru KOMACHI <usata@gentoo.org>
  wanderlust-2.11.24_pre20040409.ebuild,
  wanderlust-2.11.25_pre20040416.ebuild,
  wanderlust-2.11.27_pre20040509.ebuild:
  Version bumped. Removed old ebuilds.

*wanderlust-2.11.26_pre20040418 (19 Apr 2004)

  19 Apr 2004; Mamoru KOMACHI <usata@gentoo.org>
  wanderlust-2.11.26_pre20040418.ebuild:
  New CVS snapshot

*wanderlust-2.11.25_pre20040416 (17 Apr 2004)

  17 Apr 2004; Mamoru KOMACHI <usata@gentoo.org>
  wanderlust-2.11.24_pre20040209.ebuild,
  wanderlust-2.11.24_pre20040309.ebuild,
  wanderlust-2.11.25_pre20040416.ebuild:
  New CVS snapshot. Removed old versions.

*wanderlust-2.11.24_pre20040409 (11 Apr 2004)

  11 Apr 2004; Mamoru KOMACHI <usata@gentoo.org>
  wanderlust-2.11.24_pre20040409.ebuild:
  New CVS snapshot

*wanderlust-2.11.24_pre20040309 (09 Mar 2004)

  09 Mar 2004; Mamoru KOMACHI <usata@gentoo.org>
  wanderlust-2.11.24_pre20040309.ebuild:
  New CVS snapshot

*wanderlust-2.11.24_pre20040209 (10 Feb 2004)

  10 Feb 2004; Mamoru KOMACHI <usata@gentoo.org>
  wanderlust-2.11.24_pre20040209.ebuild:
  New CVS snapshot

*wanderlust-2.11.23_pre20040111 (12 Jan 2004)

  12 Jan 2004; Mamoru KOMACHI <usata@gentoo.org>