@@ -4,8 +4,13 @@ MD5 0ad98c2bf7088df25abce47c6c6684fe wanderlust-2.8.1.ebuild 1266
 MD5 2d4d079d5651afa06dd360820aa28ed9 wanderlust-2.11.29_pre20040522.ebuild 1203
 MD5 eac13ae46089f036f1500bfceee0c901 ChangeLog 4977
 MD5 42cbdeef12abd31687396ae303321803 metadata.xml 271
+MD5 6550e25561af37389e8deee02605c288 wanderlust-2.11.29_pre20040522.ebuild 1204
+MD5 da5c124a7c23fedb2f6581ef8c3542f9 wanderlust-2.11.28_pre20040516.ebuild 1204
+MD5 a99b6d17684ed733c7b3b7404b658ef1 wanderlust-2.10.1-r2.ebuild 1492
+MD5 245d388fcee265f9eb65d664b1461044 wanderlust-2.10.1-r2.ebuild.bak 1486
 MD5 44642f0fb41a990b0451d247cfb33033 files/digest-wanderlust-2.8.1 61
 MD5 c633c96cff2fe04a6aec8ba3a96440d7 files/70wl-gentoo.el 298
-MD5 a1bfc4b7eef1308abd5c2506274255fe files/digest-wanderlust-2.11.28_pre20040516 72
 MD5 2cc71c29a99b30471c7dbecae5f49382 files/digest-wanderlust-2.10.1-r1 61
 MD5 b02cc0bdb428035c808c9894dc26fac7 files/digest-wanderlust-2.11.29_pre20040522 72
+MD5 a1bfc4b7eef1308abd5c2506274255fe files/digest-wanderlust-2.11.28_pre20040516 72
+MD5 a8f86382da45e4a1136e478ad781477e files/digest-wanderlust-2.10.1-r2 131
