@@ -1,0 +1,2 @@
+MD5 80cb1a4e3c76025284bf7eaa23faf1d6 wl-2.10.1.tar.gz 967205
+MD5 4e7772205adc1d395b20be39cae00b91 wl-2.10.1-20040602.diff.gz 14744
