@@ -1,20 +1,20 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/wanderlust/Attic/wanderlust-2.11.28_pre20040516.ebuild,v 1.1 2004/05/17 17:20:26 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/wanderlust/Attic/wanderlust-2.10.1-r2.ebuild,v 1.1 2004/06/02 17:02:46 usata Exp $
 
-inherit elisp
+inherit elisp eutils
 
-MY_P="wl-${PV/_pre/-}"
+MY_P="${P/wanderlust/wl}"
 
 IUSE="ssl"
 
-DESCRIPTION="Wanderlust -- Yet Another Message Interface on Emacsen"
+DESCRIPTION="Wanderlust is a mail/news reader supporting IMAP4rev1 for emacsen"
 HOMEPAGE="http://www.gohome.org/wl/"
-SRC_URI="mirror://gentoo/${MY_P}.tar.gz"
+SRC_URI="ftp://ftp.gohome.org/wl/stable/${MY_P}.tar.gz
+	mirror://gentoo/${MY_P}-20040602.diff.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-# Please do not mark it stable since this is merely a CVS snapshot
 KEYWORDS="~x86 ~alpha ~sparc ~ppc"
 
 DEPEND="virtual/emacs
@@ -23,10 +23,17 @@ DEPEND="virtual/emacs
 	virtual/semi
 	!app-emacs/wanderlust-cvs"
 
-S="${WORKDIR}/${PN}"
+S="${WORKDIR}/${MY_P}"
+
+src_unpack() {
+	unpack ${MY_P}.tar.gz
+	cd ${S}
+	epatch ${DISTDIR}/${MY_P}-20040602.diff.gz
+
+	use ssl && echo "(setq wl-install-utils t)" >> WL-CFG
+}
 
 src_compile() {
-	use ssl && echo "(setq wl-install-utils t)" >> WL-CFG
 	make || die
 	make info || die
 }
@@ -48,4 +55,14 @@ src_install() {
 
 	doinfo doc/wl-ja.info doc/wl.info
 	dodoc BUGS* ChangeLog INSTALL* README*
+}
+
+pkg_postinst() {
+	elisp-site-regen
+	einfo "Please see /usr/share/doc/${P}/INSTALL.gz."
+	einfo "And Sample configuration files exist on /usr/share/wl/samples."
+}
+
+pkg_postrm() {
+	elisp-site-regen
 }
